--- a/index.css
+++ b/index.css
@@ -15,6 +15,14 @@ body{
     align-items: center;
     overflow: hidden;
 }
+.sleep{
+    width: 290px;
+    height: 550px;
+    position: absolute;
+    z-index: 5;
+    visibility: hidden;
+    background-color: rgb(11, 11, 11);
+}
 .nav{
     width: 50%;
     background-color: black;
@@ -57,6 +65,7 @@ body{
     background-position: center;
     position: absolute;
     display: flex;
+    
     flex-direction: column;
     align-items: center;
 }
@@ -164,20 +173,43 @@ body{
 }
 .left::-webkit-scrollbar {display: none;}
 .right::-webkit-scrollbar {display: none;}
-.widgeta,.widgetb,.widgetc{
+.widgetb::-webkit-scrollbar {display: none;}
+.widgeta{
     width: 100%;
     height: 100%;
-    background-color: aqua;
+    background-image: url(https://cdn.pixabay.com/photo/2022/11/06/10/54/clock-7573739_1280.jpg);
+    background-size: cover;
+    background-position: center;
+}
+div[bb]{
+    display: none;
 }
 .widgetb{
+    position: relative;
     width: 100%;
     height: 100%;
-    background-color: rgb(0, 255, 8);
+    background-color: black;
+    display: flex;
+    align-items: center;
+    overflow-x: scroll;
+}
+.widgetb:hover div[bb]{ 
+    display: block;
+}
+.widgetb img{
+    width:90%;
+    height: 100%;
+    padding: 16px;
 }
 .widgetc{
+    color: white;
     width: 100%;
     height: 100%;
-    background-color: rgb(255, 0, 106);
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 .seba{
     position: absolute;
@@ -322,14 +354,31 @@ button svg{
     animation-duration: 5s ;
     animation-direction: alternate;
 }
-.widget{
+.widget_on_lockscreen{
     background-color: antiquewhite;
     width: 80%;
     height: 100px;
     position: relative;
     top: 30px;
 }
-
+.phone_charging_circle{
+    width: 65px;
+    height: 65px;
+    border-radius: 100%;
+    border: 5px solid rgb(97, 235, 97);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+main[a]{
+    position: relative;
+}
+aside[a]{
+    position:absolute;
+    right: 26%;
+    bottom: 25%;
+    
+}
 
 
 
