--- a/index.css
+++ b/index.css
@@ -141,7 +141,7 @@ body{
     width: 290px;
     height: 550px;
     position: absolute;
-    background-color: blue;
+    background-color: black;
 }
 .carousel{
     /* background-color: rgb(11, 211, 88); */
@@ -158,7 +158,6 @@ body{
     position: absolute;
     width: 95%;
     height:23% ;
-    background-color: rgb(85, 0, 255);
     top: 5px;
     display: flex;
     align-items: center;
@@ -221,16 +220,29 @@ div[bb]{
     gap: 10px;
     padding-left: 12px;
 }
-.seba button{
+.seba button,.sec button,.thirda button{
     position: relative;
     width: 55px;
     height: 55px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(127, 255, 212);
+    background-color: rgba(22, 39, 149, 0);
     border: 0;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
 
+}
+.seba button img,.sec button img,.thirda button img{
+    width: 120%;
+    height: 95%;
+    border-radius: 7px;
+}
+.seba button p,.sec button p,.thirda button p{
+    font-size: 10px;
+    font-family: sans-serif;
+    color: white;
 }
 button svg{
     position: absolute;
@@ -243,14 +255,21 @@ button svg{
     width: 90%;
     height:12% ;
     border-radius: 5px;
-    background-color: rgb(0, 255, 183);
+    background-color: rgba(240, 241, 241, 0.667);
+    backdrop-filter: blur(20px);
     bottom: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 .second{
     position: relative;
     width: 290px;
     height: 550px;
     background-color: rgb(225, 29, 29);
+    background-image: url(iphone\ bg.webp);
+    background-size: cover;
+    background-position: center;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -260,7 +279,23 @@ button svg{
 .third{
     width: 290px;
     height: 550px;
-    background-color: rgb(118, 213, 15);
+    background-image: url(iphone\ bg.webp);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.thirda{
+    width: 90%;
+    height: 50%;
+    margin-top: -40px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    position: absolute;
+    top: 60px;
 }
 .fourth{
     width: 290px;
