--- a/index.css
+++ b/index.css
@@ -244,12 +244,12 @@ div[bb]{
     font-family: sans-serif;
     color: white;
 }
-button svg{
+/* button svg[a]{
     position: absolute;
     width: 90%;
     height: 90%;
     top: 0;
-}
+} */
 .sec{
     position: absolute;
     width: 90%;
@@ -413,6 +413,124 @@ aside[a]{
     right: 26%;
     bottom: 25%;
     
+}
+.calc_section,.note_section,.clock_section,.photo_section,.music_section,.camera_section,.call_section,.message_section,.weather_section,.contact_section,.game_section,.sub_section,.cart_section{
+    background-color: blue;
+    width: 100%;
+    height: 100%;
+    display: none;
+    position: relative;
+
+}
+.calc_inner{
+    background-color: brown;
+    width: 90%;
+    height: 90%;
+    position: absolute;
+    top: 36px;
+    left: 15px;
+}
+.note_inner{
+    background-color: brown;
+    width: 90%;
+    height: 90%;
+    position: absolute;
+    top: 36px;
+    left: 15px;
+}
+.clock_inner{
+    background-color: brown;
+    width: 90%;
+    height: 90%;
+    position: absolute;
+    top: 36px;
+    left: 15px;
+}
+.photo_inner{
+    background-color: brown;
+    width: 90%;
+    height: 90%;
+    position: absolute;
+    top: 36px;
+    left: 15px;
+}
+.music_inner{
+    background-color: brown;
+    width: 90%;
+    height: 90%;
+    position: absolute;
+    top: 36px;
+    left: 15px;
+}
+.camera_inner{
+    background-color: brown;
+    width: 90%;
+    height: 90%;
+    position: absolute;
+    top: 36px;
+    left: 15px;
+}
+.call_inner{
+    background-color: brown;
+    width: 90%;
+    height: 90%;
+    position: absolute;
+    top: 36px;
+    left: 15px;
+}
+.message_inner{
+    background-color: brown;
+    width: 90%;
+    height: 90%;
+    position: absolute;
+    top: 36px;
+    left: 15px;
+}
+.weather_inner{
+    background-color: brown;
+    width: 90%;
+    height: 90%;
+    position: absolute;
+    top: 36px;
+    left: 15px;
+}
+.contact_inner{
+    background-color: brown;
+    width: 90%;
+    height: 90%;
+    position: absolute;
+    top: 36px;
+    left: 15px;
+}
+.game_inner{
+    background-color: brown;
+    width: 90%;
+    height: 90%;
+    position: absolute;
+    top: 36px;
+    left: 15px;
+}
+.sub_inner{
+    background-color: brown;
+    width: 90%;
+    height: 90%;
+    position: absolute;
+    top: 36px;
+    left: 15px;
+}
+.cart_inner{
+    background-color: brown;
+    width: 90%;
+    height: 90%;
+    position: absolute;
+    top: 36px;
+    left: 15px;
+}
+ button[back]{
+    background-color: rgba(127, 255, 212, 0);
+    display: flex; 
+    align-items: center;
+    border: 0;
 }
 
 
