--- a/index.css
+++ b/index.css
@@ -427,6 +427,7 @@ div[bb]{
     display: flex;
     flex-direction: column;
     align-items: center;
+    right:-30px;
 }
 .padlock{
     width: 100%;
@@ -572,12 +573,15 @@ aside[a]{
     left: 15px;
 }
 .cart_inner{
-    background-color: brown;
+    background-image: url(cart\ bg.avif);
     width: 90%;
     height: 90%;
     position: absolute;
     top: 36px;
     left: 15px;
+    color: white;
+    background-position: center;
+    background-size: contain;
 }
 button[svg]{
     width: 100px;
@@ -652,6 +656,19 @@ button[merge]{
     margin-top: 5px;
     border: 0;
     margin-left: 3px;
+}
+.list{
+    width: 100%;
+    position: absolute;
+    height: 70%;
+    margin-top: 50px;
+    overflow-y: scroll;
+}
+.list::-webkit-scrollbar{
+    display: none;
+}
+table,thead,th,tbody,td{
+    font-size: 13px;
 }
 
 
